--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 				<h1>HANGMAN APPLICATION</h1>
 			</div>
 		</div>
+		<div class="row" id="messages">
+			<div class="col-xs-12 col-sm-12 col-md-12">
+			<!-- sub header; winer, loser, try again, error, game answer -->
+				<h1>You win (placeholder)</h1>
+			</div>
+		</div>
 		<div class="row" id="out-container">
 		    <div class="col-xs-12 col-sm-12 col-md-3"></div>
 			<div class="col-xs-12 col-sm-12 col-md-6">
@@ -41,12 +47,12 @@
 					<div class="col-xs-12 col-sm-12 col-md-6 game" id="image-display">
 						<!-- left game display -->
 						<!-- images -->
-						<p>placeholder</p>
+						<p>L placeholder</p>
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 game" id="game-data">
 						<!-- right game display -->
 						<!-- score, messages, word guessing, letter count, etc.-->
-						<p>placeholder</p>
+						<p>R placeholder</p>
 					</div>
 				</div>
 			</div>
