update sub header

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<div class="row" id="messages">
 			<div class="col-xs-12 col-sm-12 col-md-12">
 			<!-- sub header; winer, loser, try again, error, game answer -->
-				<h1>You win (placeholder)</h1>
+				<h2>You win /lose (placeholder)</h2>
 			</div>
 		</div>
 		<div class="row" id="out-container">
