add containers for game data
<div id="letters-dashes"></div>
						<div id="letters-guessed"></div>
						<div id="total-guesses"></div>

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 					<div class="col-xs-12 col-sm-12 col-md-6 game" id="game-data">
 						<!-- right game display -->
 						<!-- score, messages, word guessing, letter count, etc.-->
-						<p>R placeholder</p>
+						<div id="letters-dashes"></div>
+						<div id="letters-guessed"></div>
+						<div id="total-guesses"></div>
 					</div>
 				</div>
 			</div>
